# Llmber

./: AlpacaChatbot.py  AutoChatbot.py  BardChatbot.py  BotManager.py  Chatbot.py  DalaiChatbot.py  GPT2Chatbot.py  GPT4AllChatbot.py  HFTAutoBot.py  HFTransformersAutoBot.py  LlamaCPPChatbot.py  OpenAIChatbot.py  README.md  RWKVChatbot.py  __init__.py  pyproject.toml  stable-lm.py
src/llmber/: AlpacaChatbot.py  AutoChatbot.py  BardChatbot.py  BotManager.py  Chatbot.py  HFTAutoBot.py  LlamaCPPChatbot.py  LlamaCPPChatbot2.py  __init__.py  auto_chatbot.py  bard_chatbot.py  chatbot.py  hft_autobot.py  llamacpp_chatbot.py  openai_chatbot.py  remote_chatbot.py  rwkv_chatbot.py
src/llmber/archive/: alpaca_chatbot.py  gpt2_chatbot.py  gpt4all_chatbot.py  llamacpp_chatbot_2.py  llamacpp_chatbot_llamacpp.py  stablelm_chatbot.py
tests/: llamacpp-test.py
