[project]
name = "llmber"
version = "0.1.0"
description = "A library abstracting the nuances of LLM interaction."
authors = [
	{ name = "Cammy", email = "cameronsteele@steelecameron.com" }
]
readme = "README.md"
requires-python = ">=3.9.0,<3.12"
dependencies = [
	"appdirs >=1.4.4,<2.0.0",
	"keyring >=24.2.0,<25.0.0",
	"torch >=2.0.1,<3.0.0",
	"transformers >=4.32.1,<5.0.0",
	"openai >=1.7.0,<2.0.0",
	"googlebard >=2.1.0,<3.0.0",
]

[project.optional-dependencies]
llamacpp = [ "llama-cpp-python >=0.1.48" ]
rwkv = [ "rwkv >=0.7.3" ]

[build-system]
requires = ["setuptools >= 67.7.2", "wheel >=0.40.0"]
build-backend = "setuptools.build_meta"
